--- a/MduiBlazor.Shared/Pages/Examples/FabButtons/FabMenu.razor
+++ b/MduiBlazor.Shared/Pages/Examples/FabButtons/FabMenu.razor
@@ -1,11 +1,12 @@
-<MduiFabMenu Hide="@Hide" Icon="add" OpenedIcon="edit" Color="@Colors.Theme.Accent">
-    <MduiFab Icon="backup" Color="@Colors.Theme.Primary" Mini />
-    <MduiFab Icon="bookmark" Color="@Colors.Theme.Accent" Mini />
-    <MduiFab Icon="access_alarms" Color="@Colors.Blue.Primary" Mini />
-    <MduiFab Icon="touch_app" Color="@Colors.Green.Primary" Mini />
-</MduiFabMenu>
+<MduiButton Color="@Colors.Theme.Accent" OnClick="@(_=>hide=!hide)">@(hide ? "显示" : "隐藏")弹出按钮</MduiButton>
 
-@code {
-    [Parameter]
-    public bool Hide { get; set; }
+<MduiFabMenu Hide="@hide" Icon="add" OpenedIcon="edit" Color="@Colors.Theme.Accent">
+    <MduiFab Icon="backup" Color="@Colors.Theme.Primary" Mini />
+     <MduiFab Icon="bookmark" Color="@Colors.Theme.Accent" Mini />
+     <MduiFab Icon="access_alarms" Color="@Colors.Blue.Primary" Mini />
+     <MduiFab Icon="touch_app" Color="@Colors.Green.Primary" Mini />
+ </MduiFabMenu>
+
+ @code {
+    bool hide;
 }
