update, add grid components

--- a/MduiBlazor.Shared/Pages/ButtonsPage.razor
+++ b/MduiBlazor.Shared/Pages/ButtonsPage.razor
@@ -61,7 +61,7 @@
         <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">属性/方法/事件</MduiText>
     </h2>
 
-    <MduiTableContainer UseMduiTypo>
+    <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
         <MduiSimpleTable>
             <thead>
                 <th>组件</th>
