--- a/MduiBlazor.Shared/Pages/Examples/Buttons/BlockButton.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Buttons/BlockButton.razor
@@ -1,8 +1,8 @@
-<div class="mdui-row-xs-2">
-    <div class="mdui-col">
+<MduiRow BreakpointXs="@Breakpoint.Xs.xs2">
+    <MduiCol>
         <MduiButton Block>Button</MduiButton>
-    </div>
-    <div class="mdui-col">
+    </MduiCol>
+    <MduiCol>
         <MduiButton Block DisableRaised Color="@Colors.Theme.Accent">Button</MduiButton>
-     </div>
- </div>
+     </MduiCol>
+ </MduiRow>
