--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -16,6 +16,7 @@
         <MduiNavMenuItem Href="chips">Chips</MduiNavMenuItem>
         <MduiNavMenuItem Href="dialogs">Dialogs</MduiNavMenuItem>
         <MduiNavMenuItem Href="inputs">Form & Inputs</MduiNavMenuItem>
+        <MduiNavMenuItem Href="grid">网格布局</MduiNavMenuItem>
         <MduiNavMenuItem Href="list">List</MduiNavMenuItem>
         <MduiNavMenuItem Href="menus">Menus</MduiNavMenuItem>
         <MduiNavMenuItem Href="pagination">Pagination</MduiNavMenuItem>
