--- a/mdui/src/styles/grid.less
+++ b/mdui/src/styles/grid.less
@@ -89,6 +89,8 @@
 
 .mdui-row,
 [class*="mdui-row-"] {
+  display: flex;
+  flex-wrap: wrap;
   margin-right: -@grid-gap-16 / 2;
   margin-left: -@grid-gap-16 / 2;
   &::after {
