--- a/MduiBlazor/wwwroot/css/mdui.css
+++ b/MduiBlazor/wwwroot/css/mdui.css
@@ -5888,6 +5888,11 @@ body *::-webkit-scrollbar-thumb {
 }
 .mdui-row,
 [class*="mdui-row-"] {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin-right: -8px;
   margin-left: -8px;
 }
