fix gridpage theme

--- a/MduiBlazor.Shared/Pages/GridPage.razor
+++ b/MduiBlazor.Shared/Pages/GridPage.razor
@@ -49,62 +49,64 @@
          <li><code>BreakpointXl</code><code>OffsetBreakpointXl</code>在特大屏幕设备上生效，如电视。</li>
      </ul>
      <p>混用这些参数，可以达到响应式的效果。响应式断点如下：</p>
-     <MduiSimpleTable UseMduiTypo Class="mdui-m-b-5">
-         <thead>
-             <th>断点</th>
-             <th>参数值</th>
-             <th>屏幕区间</th>
-             <th>槽宽</th>
-         </thead>
-         <tbody>
-             <tr>
-                 <td>
-                     <code>xs</code>
-                 </td>
-                 <td>
-                     <code>Breakpoint.Xs.xs[1-12]</code>
-                 </td>
-                 <td>&gt; 0</td>
-                 <td rowspan="5">16px（每列左右均有 8px）</td>
-             </tr>
-             <tr>
-                 <td>
-                     <code>sm</code>
-                 </td>
-                 <td>
-                     <code>Breakpoint.Sm.sm[1-12]</code>
-                 </td>
-                 <td>&gt; 600px</td>
-             </tr>
-             <tr>
-                 <td>
-                     <code>md</code>
-                 </td>
-                 <td>
-                     <code>Breakpoint.Md.md[1-12]</code>
-                 </td>
-                 <td>&gt; 1024px</td>
-             </tr>
-             <tr>
-                 <td>
-                     <code>lg</code>
-                 </td>
-                 <td>
-                     <code>Breakpoint.Lg.lg[1-12]</code>
-                 </td>
-                 <td>&gt; 1440px</td>
-             </tr>
-             <tr>
-                 <td>
-                     <code>xl</code>
-                 </td>
-                 <td>
-                     <code>Breakpoint.Xl.xl[1-12]</code>
-                 </td>
-                 <td>&gt; 1920px</td>
-             </tr>
-         </tbody>
-     </MduiSimpleTable>
+     <MduiTableContainer UseMduiTypo Class="mdui-m-b-5">
+         <MduiSimpleTable>
+             <thead>
+                 <th>断点</th>
+                 <th>参数值</th>
+                 <th>屏幕区间</th>
+                 <th>槽宽</th>
+             </thead>
+             <tbody>
+                 <tr>
+                     <td>
+                         <code>xs</code>
+                     </td>
+                     <td>
+                         <code>Breakpoint.Xs.xs[1-12]</code>
+                     </td>
+                     <td>&gt; 0</td>
+                     <td rowspan="5">16px（每列左右均有 8px）</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>sm</code>
+                     </td>
+                     <td>
+                         <code>Breakpoint.Sm.sm[1-12]</code>
+                     </td>
+                     <td>&gt; 600px</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>md</code>
+                     </td>
+                     <td>
+                         <code>Breakpoint.Md.md[1-12]</code>
+                     </td>
+                     <td>&gt; 1024px</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>lg</code>
+                     </td>
+                     <td>
+                         <code>Breakpoint.Lg.lg[1-12]</code>
+                     </td>
+                     <td>&gt; 1440px</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>xl</code>
+                     </td>
+                     <td>
+                         <code>Breakpoint.Xl.xl[1-12]</code>
+                     </td>
+                     <td>&gt; 1920px</td>
+                 </tr>
+             </tbody>
+         </MduiSimpleTable>
+     </MduiTableContainer>
      <ExampleSection Component="@typeof(ResponseGrid)" />
 
      <MduiText id="colgapless" Typo="@Typo.subheading"><b>列间距</b></MduiText>
@@ -143,187 +145,187 @@
      </h2>
 
      <MduiTableContainer UseMduiTypo Class="mdui-m-y-1">
-        <MduiSimpleTable>
-            <thead>
-                <th>组件</th>
-                <th>分类</th>
-                <th>名称</th>
-                <th>类型/返回类型</th>
-                <th>说明</th>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>
-                        <code>MduiContainer</code>
-                    </th>
-                    <td>
-                        <code>Parameter</code>
-                    </td>
-                    <td>
-                        <code>Fluid</code>
-                    </td>
-                    <td>
-                        <code>bool</code>
-                    </td>
-                    <td>是否100% 的屏幕宽度。默认<code>false</code>。</td>
-                </tr>
-                <tr>
-                    <th rowspan="6">
-                        <code>MduiRow</code>
-                    </th>
-                    <td rowspan="6">
-                        <code>Parameter</code>
-                    </td>
-                    <td>
-                        <code>Gapless</code>
-                    </td>
-                    <td>
-                        <code>bool</code>
-                    </td>
-                    <td>是否消除列间距。默认<code>false</code>。</td>
-                </tr>
-                <tr>
-                    <td>
-                        <code>BreakpointXs</code>
-                    </td>
-                    <td>
-                        <code>Breakpoint.Xs?</code>
-                    </td>
-                    <td>枚举，xs屏幕区间下等分列数。</td>
-                </tr>
-                <tr>
-                    <td>
-                        <code>BreakpointSm</code>
-                    </td>
-                    <td>
-                        <code>Breakpoint.SM?</code>
-                    </td>
-                    <td>枚举，sm屏幕区间下等分列数。</td>
-                </tr>
-                <tr>
-                    <td>
-                        <code>BreakpointMd</code>
-                    </td>
-                    <td>
-                        <code>Breakpoint.Md?</code>
-                    </td>
-                    <td>枚举，md屏幕区间下等分列数。</td>
-                </tr>
-                <tr>
-                    <td>
-                        <code>BreakpointLg</code>
-                    </td>
-                    <td>
-                        <code>Breakpoint.Lg?</code>
-                    </td>
-                    <td>枚举，xs屏幕区间下等分列数。</td>
-                </tr>
-                <tr>
-                    <td>
-                        <code>BreakpointXl</code>
-                    </td>
-                    <td>
-                        <code>Breakpoint.Xl?</code>
-                    </td>
-                    <td>枚举，xl屏幕区间下等分列数。</td>
-                </tr>
-                <tr>
-                    <th rowspan="10">
-                        <code>MduiCol</code>
-                    </th>
-                    <td rowspan="10">
-                        <code>Parameter</code>
-                    </td>
-                    <td>
-                        <code>BreakpointXs</code>
-                    </td>
-                    <td>
-                        <code>Breakpoint.Xs?</code>
-                    </td>
-                    <td>枚举，xs屏幕区间下占用列数。</td>
-                </tr>
-                <tr>
-                    <td>
-                        <code>BreakpointSm</code>
-                    </td>
-                    <td>
-                        <code>Breakpoint.SM?</code>
-                    </td>
-                    <td>枚举，sm屏幕区间下占用列数。</td>
-                </tr>
-                <tr>
-                    <td>
-                        <code>BreakpointMd</code>
-                    </td>
-                    <td>
-                        <code>Breakpoint.Md?</code>
-                    </td>
-                    <td>枚举，md屏幕区间下占用列数。</td>
-                </tr>
-                <tr>
-                    <td>
-                        <code>BreakpointLg</code>
-                    </td>
-                    <td>
-                        <code>Breakpoint.Lg?</code>
-                    </td>
-                    <td>枚举，xs屏幕区间下占用列数。</td>
-                </tr>
-                <tr>
-                    <td>
-                        <code>BreakpointXl</code>
-                    </td>
-                    <td>
-                        <code>Breakpoint.Xl?</code>
-                    </td>
-                    <td>枚举，xl屏幕区间下占用列数。</td>
-                </tr>
-                <tr>
-                    <td>
-                        <code>OffsetBreakpointXs</code>
-                    </td>
-                    <td>
-                        <code>Breakpoint.Xs?</code>
-                    </td>
-                    <td>枚举，xs屏幕区间下偏移列数。</td>
-                </tr>
-                <tr>
-                    <td>
-                        <code>OffsetBreakpointSm</code>
-                    </td>
-                    <td>
-                        <code>Breakpoint.SM?</code>
-                    </td>
-                    <td>枚举，sm屏幕区间下偏移列数。</td>
-                </tr>
-                <tr>
-                    <td>
-                        <code>OffsetBreakpointMd</code>
-                    </td>
-                    <td>
-                        <code>Breakpoint.Md?</code>
-                    </td>
-                    <td>枚举，md屏幕区间下偏移列数。</td>
-                </tr>
-                <tr>
-                    <td>
-                        <code>OffsetBreakpointLg</code>
-                    </td>
-                    <td>
-                        <code>Breakpoint.Lg?</code>
-                    </td>
-                    <td>枚举，xs屏幕区间下偏移列数。</td>
-                </tr>
-                <tr>
-                    <td>
-                        <code>OffsetBreakpointXl</code>
-                    </td>
-                    <td>
-                        <code>Breakpoint.Xl?</code>
-                    </td>
-                    <td>枚举，xl屏幕区间下偏移列数。</td>
-                </tr>
-            </tbody>
-        </MduiSimpleTable>
-    </MduiTableContainer>
-</div>
+         <MduiSimpleTable>
+             <thead>
+                 <th>组件</th>
+                 <th>分类</th>
+                 <th>名称</th>
+                 <th>类型/返回类型</th>
+                 <th>说明</th>
+             </thead>
+             <tbody>
+                 <tr>
+                     <th>
+                         <code>MduiContainer</code>
+                     </th>
+                     <td>
+                         <code>Parameter</code>
+                     </td>
+                     <td>
+                         <code>Fluid</code>
+                     </td>
+                     <td>
+                         <code>bool</code>
+                     </td>
+                     <td>是否100% 的屏幕宽度。默认<code>false</code>。</td>
+                 </tr>
+                 <tr>
+                     <th rowspan="6">
+                         <code>MduiRow</code>
+                     </th>
+                     <td rowspan="6">
+                         <code>Parameter</code>
+                     </td>
+                     <td>
+                         <code>Gapless</code>
+                     </td>
+                     <td>
+                         <code>bool</code>
+                     </td>
+                     <td>是否消除列间距。默认<code>false</code>。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>BreakpointXs</code>
+                     </td>
+                     <td>
+                         <code>Breakpoint.Xs?</code>
+                     </td>
+                     <td>枚举，xs屏幕区间下等分列数。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>BreakpointSm</code>
+                     </td>
+                     <td>
+                         <code>Breakpoint.SM?</code>
+                     </td>
+                     <td>枚举，sm屏幕区间下等分列数。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>BreakpointMd</code>
+                     </td>
+                     <td>
+                         <code>Breakpoint.Md?</code>
+                     </td>
+                     <td>枚举，md屏幕区间下等分列数。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>BreakpointLg</code>
+                     </td>
+                     <td>
+                         <code>Breakpoint.Lg?</code>
+                     </td>
+                     <td>枚举，xs屏幕区间下等分列数。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>BreakpointXl</code>
+                     </td>
+                     <td>
+                         <code>Breakpoint.Xl?</code>
+                     </td>
+                     <td>枚举，xl屏幕区间下等分列数。</td>
+                 </tr>
+                 <tr>
+                     <th rowspan="10">
+                         <code>MduiCol</code>
+                     </th>
+                     <td rowspan="10">
+                         <code>Parameter</code>
+                     </td>
+                     <td>
+                         <code>BreakpointXs</code>
+                     </td>
+                     <td>
+                         <code>Breakpoint.Xs?</code>
+                     </td>
+                     <td>枚举，xs屏幕区间下占用列数。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>BreakpointSm</code>
+                     </td>
+                     <td>
+                         <code>Breakpoint.SM?</code>
+                     </td>
+                     <td>枚举，sm屏幕区间下占用列数。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>BreakpointMd</code>
+                     </td>
+                     <td>
+                         <code>Breakpoint.Md?</code>
+                     </td>
+                     <td>枚举，md屏幕区间下占用列数。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>BreakpointLg</code>
+                     </td>
+                     <td>
+                         <code>Breakpoint.Lg?</code>
+                     </td>
+                     <td>枚举，xs屏幕区间下占用列数。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>BreakpointXl</code>
+                     </td>
+                     <td>
+                         <code>Breakpoint.Xl?</code>
+                     </td>
+                     <td>枚举，xl屏幕区间下占用列数。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>OffsetBreakpointXs</code>
+                     </td>
+                     <td>
+                         <code>Breakpoint.Xs?</code>
+                     </td>
+                     <td>枚举，xs屏幕区间下偏移列数。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>OffsetBreakpointSm</code>
+                     </td>
+                     <td>
+                         <code>Breakpoint.SM?</code>
+                     </td>
+                     <td>枚举，sm屏幕区间下偏移列数。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>OffsetBreakpointMd</code>
+                     </td>
+                     <td>
+                         <code>Breakpoint.Md?</code>
+                     </td>
+                     <td>枚举，md屏幕区间下偏移列数。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>OffsetBreakpointLg</code>
+                     </td>
+                     <td>
+                         <code>Breakpoint.Lg?</code>
+                     </td>
+                     <td>枚举，xs屏幕区间下偏移列数。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>OffsetBreakpointXl</code>
+                     </td>
+                     <td>
+                         <code>Breakpoint.Xl?</code>
+                     </td>
+                     <td>枚举，xl屏幕区间下偏移列数。</td>
+                 </tr>
+             </tbody>
+         </MduiSimpleTable>
+     </MduiTableContainer>
+ </div>
