--- a/MduiBlazor.Shared/Components/ExampleSection.razor.css
+++ b/MduiBlazor.Shared/Components/ExampleSection.razor.css
@@ -70,3 +70,15 @@
 .mdui-theme-layout-dark .example-tools a {
     color: hsla(0,0%,100%,.7);
 }
+
+::deep .example-demo .mdui-row>.mdui-col {
+    background-color: #e8eaf6;
+    border: 1px solid #c5cae9;
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+
+.mdui-theme-layout-dark .example-demo ::deep .mdui-row>.mdui-col {
+    background-color: #424242 !important;
+    border-color: #757575;
+}
